[FIX] styles cardInfo - cardAccept - add Overflow X hidden App.Jsx

--- a/client/src/ui/assets/styles/App.css
+++ b/client/src/ui/assets/styles/App.css
@@ -9,6 +9,7 @@
 }
 .App{
   height: 100%;
+  overflow-x: hidden;
 }
 html{
   height: 100%;
