--- a/client/src/ui/components/carousel/styles.module.scss
+++ b/client/src/ui/components/carousel/styles.module.scss
@@ -50,7 +50,6 @@
   object-fit: cover;
   padding: 0;
   margin: 0;
-  cursor: pointer;
   transition: ease 0.5s transform;
 
   &:hover {
